Integer and toList() changes
Changes from int to Integer and from collect(Collectors.toList()) to toList().